# cafe-bakery

./: app.py  pyproject.toml  requeriments.txt
instance/: padaria.db
templates/: base.html  cadastro_prod.html  contato.html  editar.html  index.html  produtos.html
