[tool.poetry]
name = "projeto-padaria"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-simplelogin = "^0.2.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
